feat: настраивает проект, завершает шапку

--- a/source/sass/mixins.scss
+++ b/source/sass/mixins.scss
@@ -76,6 +76,12 @@
   }
 }
 
+@mixin vp-679 {
+  @media (max-width: ($vp-680 - 1px)) {
+    @content;
+  }
+}
+
 @mixin vp-389 {
   @media (max-width: ($vp-390 - 1px)) {
     @content;
