--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,10 @@
 // ---------------------------------
 
 @import "blocks/header";
+@import "blocks/header-top";
+@import "blocks/header-bottom";
+@import "blocks/header-contacts";
+@import "blocks/menu";
 @import "blocks/main-nav";
 @import "blocks/footer";
 @import "blocks/btn";
