--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -1,19 +1,13 @@
 .header {
-  z-index: 11;
-  position: fixed;
-
-  top: 0;
-  left: 0;
-
-  width: 100%;
-
-  background-color: rgba($color-black-russian, 0.9);
+  @include vp-679 {
+    background-color: $color-crusoe;
+  }
 
   &.is-open {
     .main-nav__toggle {
       span {
         &:nth-child(1) {
-          top: 10px;
+          top: 18px;
           transform: rotate(-45deg) translate(0, -50%);
         }
 
@@ -23,60 +17,16 @@
         }
 
         &:nth-child(3) {
-          top: 8px;
+          top: 17px;
           transform: rotate(45deg) translate(0, 50%);
         }
       }
     }
 
-    .main-nav__list {
-      transform: translateX(0);
-    }
-  }
+    .main-nav__menu {
+      clip-path: inset(0 0 0 0);
 
-  &__wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    width: 100%;
-    max-width: 1170px;
-    margin: 0 auto;
-    padding: 33px 0 32px;
-
-    @include vp-1023 {
-      max-width: unset;
-    }
-  }
-
-  &__logo {
-    position: relative;
-    display: block;
-
-    width: 247px;
-    height: 35px;
-    margin-right: 40px;
-
-    @include vp-1023 {
-      margin-right: 20px;
-    }
-
-    @include vp-767 {
-      z-index: 11;
-
-      width: 165px;
-      margin-right: 0;
-    }
-
-    svg {
-      display: block;
-
-      width: 247px;
-      height: 35px;
-
-      @include vp-767 {
-        width: 165px;
-      }
+      visibility: visible;
     }
   }
 }
