feat: завершает intro

--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -5,11 +5,12 @@ block variables
   - const wrapperMods = ""
   - const hasHeader = true
   - const headerMods = ""
-  - const hasFooter = false
+  - const hasFooter = true
   - const footerMods = ""
   - const currentUrl = "index.html"
 
 block main
   main
+    +intro()
 
 block modals
