--- a/source/sass/blocks/btn.scss
+++ b/source/sass/blocks/btn.scss
@@ -3,16 +3,14 @@
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
-  padding: 14px 9px;
+  padding: 12px 20px 13px;
 
-  font-weight: 400;
-  font-size: 13px;
-  line-height: 16px;
-  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
 
-  border: 1px solid $color-default-white;
-  border-radius: 4px;
-  background-color: $color-summer-sky-2;
+  border-radius: 8px;
+  background-color: $color-crusoe;
   color: $color-default-white;
 
   cursor: pointer;
@@ -22,10 +20,9 @@
 
   outline: none;
 
-  &--white {
-    border: 1px solid $color-dolphin;
-    background-color: $color-default-white;
-    color: $color-black-russian-2;
+  @include vp-1023 {
+    font-size: 16px;
+    line-height: 22px;
   }
 
   @include hover-focus {
