--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,3 +1,166 @@
 .footer {
+  background-color: $color-crusoe;
 
+  &__wrapper {
+    display: grid;
+    grid-template-columns: 170px 205px 205px 409px;
+    grid-template-rows: min-content 1fr 1fr;
+    justify-content: space-between;
+    padding: 50px 0;
+
+    @include vp-1023 {
+      padding: 30px 0;
+    }
+  }
+
+  &__logo {
+    grid-row: 1 / 3;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    width: 170px;
+    height: 119px;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+
+    color: $color-dawn;
+
+    svg {
+      flex-shrink: 0;
+
+      width: 121px;
+      height: 77px;
+      margin: 0 0 4px;
+
+      color: $color-default-white;
+    }
+  }
+
+  &__contacts {
+    grid-row: 1 / 3;
+  }
+
+  &__phone {
+    display: block;
+    margin: 0 0 15px;
+
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 28px;
+
+    color: $color-default-white;
+
+    transition: opacity $trans-default;
+
+    @include hover-focus {
+      opacity: 0.8;
+    }
+  }
+
+  &__address {
+    margin: 0;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+
+    color: $color-default-white;
+  }
+
+  &__list {
+    grid-row: 1 / 3;
+  }
+
+  &__item {
+    display: flex;
+    margin: 0 0 12px;
+
+    &:last-child {
+      margin: 0;
+    }
+  }
+
+  &__link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 25px;
+
+    color: $color-default-white;
+
+    transition: opacity $trans-default;
+
+    @include hover-focus {
+      opacity: 0.8;
+    }
+  }
+
+  &__policy {
+    grid-row: 1 / 2;
+
+    display: block;
+    margin: 0 0 16px;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+
+    color: $color-dawn;
+
+    transition: opacity $trans-default;
+
+    @include hover-focus {
+      opacity: 0.8;
+    }
+  }
+
+  &__recaptcha {
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+
+    margin: 0 0 16px;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+
+    color: $color-dawn;
+
+    a {
+      color: $color-dawn;
+
+      transition: opacity $trans-default;
+
+      @include hover-focus {
+        opacity: 0.8;
+      }
+    }
+  }
+
+  &__developed-by {
+    grid-column: 4 / 5;
+    grid-row: 3 / 4;
+
+    margin: 0;
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+
+    color: $color-dawn;
+
+    a {
+      color: $color-dawn;
+
+      transition: opacity $trans-default;
+
+      @include hover-focus {
+        opacity: 0.8;
+      }
+    }
+  }
 }
