--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,6 +10,7 @@ $color-transparent:             rgba(255, 255, 255, 0);
 // Project palette
 // для нейминга цветов используем https://www.htmlcsscolor.com/hex/334482
 
+$color-ivory:                   #fffef9;
 $color-dawn:                    #9c9b95;
 $color-charcoal:                #414141;
 $color-crusoe:                  #126133;
@@ -31,9 +32,9 @@ $black-to-right: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0)
 // ---------------------------------
 
 // переменная используемая в html для подключения скейлинга
-$fz-default: 20px;
+$fz-default: 18px;
 
-$ff-lato: "Lato", "Arial", sans-serif;
+$ff-rubik: "Rubik", "Arial", sans-serif;
 
 // Animation
 // ---------------------------------
